In public/index.html, add cdn for tailwind and reformat; the font should change if reload; this is how you know that tailwind is included

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,12 @@
     name='viewport'
 >
 <meta content='ie=edge' http-equiv='X-UA-Compatible'>
-<script src="https://unpkg.com/htmx.org@2.0.1" integrity="sha384-QWGpdj554B4ETpJJC9z+ZHJcA/i59TyjxEPXiiUgN2WmTyV5OEZWCD6gQhgkdpB/" crossorigin="anonymous"></script>
+<script
+    crossorigin='anonymous'
+    integrity='sha384-QWGpdj554B4ETpJJC9z+ZHJcA/i59TyjxEPXiiUgN2WmTyV5OEZWCD6gQhgkdpB/'
+    src='https://unpkg.com/htmx.org@2.0.1'
+></script>
+<script src='https://cdn.tailwindcss.com'></script>
 <title>HTMX</title>
 </head>
 <body>
