Change the CDN script for HTMX to 1.9.10 because 2.0.1 has breaking changes
Add some HTML with a button which when clicked outputs a list of users; we do this via HTMX attributes hx-get='/users' and hx-swap='outerHTML' on the button, and in server.js, we handle the GET request to fetch the users by creating an app.get which has const users which will have an array of three users; then we res.send a template literal which maps through const users for display

// Handle GET request to fetch users
app.get( '/users', ( req, res ) => {
  const users = [
    { name: 'John Doe', email: 'john@gmail.com', id: '1' },
    { name: 'Bob Williams', email: 'bob@gmail.com', id: '2' },
    { name: 'Shannon Jackson', email: 'shannon@gmail.com', id: '3' },
  ];

  res.send( `
    <h1 class='text-2xl font-bold my-4'>Users</h1>
    <ul>
      ${ users.map( ( user ) => `<li>${ user.name }</li>` ).join( '' ) }
    </ul>
  ` );
} );

--- a/public/index.html
+++ b/public/index.html
@@ -8,15 +8,26 @@
 >
 <meta content='ie=edge' http-equiv='X-UA-Compatible'>
 <script
-    crossorigin='anonymous'
-    integrity='sha384-QWGpdj554B4ETpJJC9z+ZHJcA/i59TyjxEPXiiUgN2WmTyV5OEZWCD6gQhgkdpB/'
-    src='https://unpkg.com/htmx.org@2.0.1'
+    src="https://unpkg.com/htmx.org@1.9.10"
+    integrity="sha384-D1Kt99CQMDuVetoL1lrYwg5t+9QdHe7NLX/SoJYkXDFfX37iInKRy5xLSi8nO7UC"
+    crossorigin="anonymous"
 ></script>
-<script src='https://cdn.tailwindcss.com'></script>
+
+    <script src="https://cdn.tailwindcss.com"></script>
 <title>HTMX</title>
 </head>
 <body>
-  <h1>Hello</h1>
-  
+  <div class='text-center'>
+      <h1 class='text-2xl font-bold my-5'>
+        Simple Request Example
+      </h1>
+    <button
+        class='bg-blue-500 text-white py-2 px-3 my-5 rounded-lg'
+        hx-get='/users'
+        hx-swap='outerHTML'
+    >
+      Fetch Users
+    </button>
+      </div>
 </body>
 </html>
