--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,9 @@
       </h1>
     <button
         class='bg-blue-500 text-white py-2 px-3 my-5 rounded-lg'
-        hx-get='/users'
+        hx-get='https://jsonplaceholder.typicode.com/users'
         hx-swap='outerHTML'
+        hx-trigger='click'
     >
       Fetch Users
     </button>
