--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
         class='bg-blue-500 text-white py-2 px-3 my-5 rounded-lg'
         hx-get='https://jsonplaceholder.typicode.com/users'
         hx-swap='outerHTML'
-        hx-trigger='click'
+        hx-trigger='mouseover'
     >
       Fetch Users
     </button>
