Instead of losing the button and replacing with the user names when clicked, use hx-target to target #users; we create #users as an empty div bellow the button;  doing it this way, when the button is clicked, a list of user names will appear just below the button within that div
// relevant code
<div class='text-center'>
      <h1 class='text-2xl font-bold my-5'>
        Simple Request Example
      </h1>
    <button
        class='bg-blue-500 text-white py-2 px-3 my-5 rounded-lg'
        hx-get='/users'
        hx-target='#users'
    >
      Fetch Users
    </button>
    <div id='users'></div>
</div>

--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,12 @@
 >
 <meta content='ie=edge' http-equiv='X-UA-Compatible'>
 <script
-    src="https://unpkg.com/htmx.org@1.9.10"
-    integrity="sha384-D1Kt99CQMDuVetoL1lrYwg5t+9QdHe7NLX/SoJYkXDFfX37iInKRy5xLSi8nO7UC"
-    crossorigin="anonymous"
+    crossorigin='anonymous'
+    integrity='sha384-D1Kt99CQMDuVetoL1lrYwg5t+9QdHe7NLX/SoJYkXDFfX37iInKRy5xLSi8nO7UC'
+    src='https://unpkg.com/htmx.org@1.9.10'
 ></script>
 
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src='https://cdn.tailwindcss.com'></script>
 <title>HTMX</title>
 </head>
 <body>
@@ -24,10 +24,11 @@
     <button
         class='bg-blue-500 text-white py-2 px-3 my-5 rounded-lg'
         hx-get='/users'
-        hx-swap='outerHTML'
+        hx-target='#users'
     >
       Fetch Users
     </button>
+    <div id='users'></div>
       </div>
 </body>
 </html>
