--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
       </h1>
     <button
         class='bg-blue-500 text-white py-2 px-3 my-5 rounded-lg'
+        hx-confirm='Are you sure you want to fetch users?'
         hx-get='/users'
         hx-target='#users'
     >
