--- a/public/index.html
+++ b/public/index.html
@@ -24,10 +24,14 @@
     <button
         class='bg-blue-500 text-white py-2 px-3 my-5 rounded-lg'
         hx-get='/users'
+        hx-indicator='#loading'
         hx-target='#users'
     >
       Fetch Users
     </button>
+    <span class='htmx-indicator' id='loading'>
+      <img src='img/loader.gif' alt='Loading...' class='m-auto'>
+    </span>
     <div id='users'></div>
       </div>
 </body>
