--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
       Fetch Users
     </button>
     <span class='htmx-indicator' id='loading'>
-      <img src='img/loader.gif' alt='Loading...' class='m-auto'>
+      <img src='img/loader.gif' alt='Loading...' class='m-auto h-10'>
     </span>
     <div id='users'></div>
       </div>
