--- a/public/index.html
+++ b/public/index.html
@@ -26,11 +26,19 @@
         hx-get='/users'
         hx-indicator='#loading'
         hx-target='#users'
+        hx-vals='{"limit": 5}'
     >
       Fetch Users
     </button>
+    
+    <!--
+      Note:  The hx-indicator attribute allows you to specify the element that will
+        have the htmx-request class added to it for the duration of the request.
+        This can be used to show spinners or progress indicators while the request
+        is in flight.
+    -->
     <span class='htmx-indicator' id='loading'>
-      <img src='img/loader.gif' alt='Loading...' class='m-auto h-10'>
+      <img alt='Loading...' class='m-auto h-10' src='img/loader.gif'>
     </span>
     <div id='users'></div>
       </div>
