--- a/public/index.html
+++ b/public/index.html
@@ -14,33 +14,9 @@
 ></script>
 
     <script src='https://cdn.tailwindcss.com'></script>
-<title>HTMX</title>
+<title>HTMX - Temperature Converter</title>
 </head>
 <body>
-  <div class='text-center'>
-      <h1 class='text-2xl font-bold my-5'>
-        Simple Request Example
-      </h1>
-    <button
-        class='bg-blue-500 text-white py-2 px-3 my-5 rounded-lg'
-        hx-get='/users'
-        hx-indicator='#loading'
-        hx-target='#users'
-        hx-vals='{"limit": 5}'
-    >
-      Fetch Users
-    </button>
-    
-    <!--
-      Note:  The hx-indicator attribute allows you to specify the element that will
-        have the htmx-request class added to it for the duration of the request.
-        This can be used to show spinners or progress indicators while the request
-        is in flight.
-    -->
-    <span class='htmx-indicator' id='loading'>
-      <img alt='Loading...' class='m-auto h-10' src='img/loader.gif'>
-    </span>
-    <div id='users'></div>
-      </div>
+
 </body>
 </html>
