Beginning a small example of polling where it updates every five seconds
// public/index.html relevant code
 <div class='text-center'>
    <span
        hx-get='/poll'
        hx-trigger='every 5s'>
      Loading,,,
    </span>
</div>

// server.js relevant code
// Handle GET request for polling example
let counter = 0;
app.get( '/poll', ( req, res ) => {
  counter++;
  const data = { value: counter };
  res.json( data );
} );

--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,15 @@
 ></script>
 
     <script src='https://cdn.tailwindcss.com'></script>
-<title>HTMX - Temperature Converter</title>
+<title>HTMX - Polling</title>
 </head>
 <body>
-
+  <div class='text-center'>
+    <span
+        hx-get='/poll'
+        hx-trigger='every 5s'>
+      Loading,,,
+    </span>
+  </div>
 </body>
 </html>
