Comment out previous public/index.html code; replace with static 'Weather in New York' h1 with blue background; in server.js, generate a random celsius temperature to handle GET request for weather in /get-temperature route;  do not implement this yet, just create it

--- a/public/index.html
+++ b/public/index.html
@@ -16,13 +16,19 @@
     <script src='https://cdn.tailwindcss.com'></script>
 <title>HTMX - Polling</title>
 </head>
-<body>
-  <div class='text-center'>
-    <span
-        hx-get='/poll'
-        hx-trigger='every 5s'>
-      Loading,,,
-    </span>
-  </div>
-</body>
+<!--<body>-->
+<!--  <div class='text-center'>-->
+<!--    <span-->
+<!--        hx-get='/get-temperature'-->
+<!--        hx-trigger='every 5s'>-->
+<!--      Loading,,,-->
+<!--    </span>-->
+<!--  </div>-->
+<!--</body>-->
+
+<body class='bg-blue-900 text-white min-h-screen flex items-center justify-center'>
+    <div class='text-center'>
+      <h1 class='text-xl mb-r'>Weather in New York</h1>
+    </div>
+    </body>
 </html>
